<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNew" />

    <EditText
        android:id="@+id/editTextNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <Spinner
        android:id="@+id/spinnerEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categoryAdd" />

    <TextView
        android:id="@+id/textViewEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc" />

    <EditText
        android:id="@+id/editTextDescEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="5"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textViewRateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate" />

    <RatingBar
        android:id="@+id/ratingBarEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/can" />

        <Button
            android:id="@+id/buttonRem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:layout_marginRight="5dp"
            android:text="@string/rem" />

        <Button
            android:id="@+id/buttonUpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upd" />
    </LinearLayout>

</LinearLayout>