<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNew" />

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <Spinner
        android:id="@+id/spinnerAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categoryAdd" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="5"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textViewRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>